--- a/Getting-Started/EaselJS/index.html
+++ b/Getting-Started/EaselJS/index.html
@@ -14,7 +14,16 @@
         <meta charset="utf-8">
         <title>EaselJS</title>
         <meta name="description" content="">
-
+	<link href="main.css" 
+		rel="stylesheet">
+<!-- Bootstrap -->
+    <!--
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+		  rel="stylesheet" 
+		  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+		  crossorigin="anonymous">
+	-->
+	<!-- Bootswatch -->
 
 		<!-- Include the EaselJS libraries in your project by linking to the CreateJS CDN. -->
 		<script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
