--- a/Getting-Started/EaselJS/index.html
+++ b/Getting-Started/EaselJS/index.html
@@ -11,11 +11,16 @@
  -->
 <html >
     <head>
-        <meta charset="utf-8">
+        
         <title>EaselJS</title>
         <meta name="description" content="">
 	<link href="main.css" 
 		rel="stylesheet">
+		
+		  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!-- Bootstrap -->
     <!--
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
@@ -24,16 +29,40 @@
 		  crossorigin="anonymous">
 	-->
 	<!-- Bootswatch -->
+<link href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/pulse/bootstrap.min.css" 
+		rel="stylesheet"
+		integrity="sha384-s4gnxO2aVdL1Yod+BZDOlk2050aVqe/OPfWcWp9EeSihsgc6exzYVQiPoiOfr3Qp" 
+		crossorigin="anonymous">
 
 		<!-- Include the EaselJS libraries in your project by linking to the CreateJS CDN. -->
 		<script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
 				<script src="main.js"></script>
     </head>
 	<body onload="init();">
+
+	<div class="row">
+	  <div class="col-sm-4 knockout">EaselJS</div>
+	  <div class="col-sm-4" id="demo">
+	     For more information on EaselJS visit 
+		 <a href="https://createjs.com/easeljs">createjs.com</a>
+	    <img  id="logo" src="easelJsLogo.png"/>
+	  </div>
+	</div>
+	
+	
+	
+	
         <!-- site / application content here 
 		     canvas element within your body tag, 
 		     set to body to call a function when it has loaded.-->	
-		  <canvas id="demoCanvas" width="500" height="300"></canvas>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-4">
+	<canvas id="demoCanvas" width="500" height="500"></canvas>
+  </div>
+  <div class="col-sm-4"></div>
+</div>
+		  
 
 
 
