getting-started preload

--- a/Getting-Started/PreloadJS/index.html
+++ b/Getting-Started/PreloadJS/index.html
@@ -30,10 +30,9 @@
     </head>
     <body>
 	
-	<!-- Canvas for CreateJS -->
-	<body onload="init();">
-		<canvas id="Canvas" width="500" height="200"></canvas>
-	</body>
+	<!-- CreateJS -->
+    <button onclick="loadImage();" class="load-image">Load Image</button>
+
 	
         
     </body>
