--- a/BasicAnimation/index.html
+++ b/BasicAnimation/index.html
@@ -2,14 +2,21 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<script src ="http://code.createjs.com/createjs-2013.05.14.min.js"></script>
-<title>Basic Animation in Create JS</title>
+<script src="http://code.createjs.com/createjs-2013.12.12.min.js"></script>
+<title>Lon Hosford Basic CreateJS Shape Animation</title>
 <script>
-		var stage;
+		var stage, sunShape;
 		function init() 
 		{
-		stage = new createjs.Stage("stage-canvas");
-			alert(stage.canvas);
+			stage = new createjs.Stage("stage-canvas");
+			sunShape = new createjs.Shape();
+			sunShape.graphics.beginFill("#F00");
+			sunShape.graphics.drawCircle(0, 0, 25);
+			sunShape.graphics.endFill();
+			sunShape.x = 25;
+			sunShape.y = 25;
+			stage.addChild(sunShape);
+			stage.update();
 		}
 </script>
 <style>
