--- a/Interactivity with HTML5 And CreateJS - Working Files/myVersion/game.html
+++ b/Interactivity with HTML5 And CreateJS - Working Files/myVersion/game.html
@@ -31,6 +31,7 @@ var aFreq;//how often to attack
 var attackSpeed;//speed of the attack itself
 var ePosX = [-95, -95, 100, 900, 1100];
 var ePosY = [90, 180, -75, -75, 0];
+var eEgg = false;
 //============================================================================\\
 function init() {
 	canvas = document.getElementById("canvas");
@@ -141,6 +142,7 @@ function tick(eventObj){
 	if (inPlay){//if it is do game stuff...
 		heroMove(); // moves the hero
 		enemyManager(); // manages the enemy
+		eggControl();// manages the enemy egg
 	}
 	stage.update(); // update the stage to make stuff happen
 }
@@ -183,6 +185,7 @@ function enemyManager(){ //looks after how often to attack
 	}
 }
 function eAttack(){
+	eEgg = false;// ensure egg is invasiabe.
 	enemy.scaleX = -1.3; //flip the enemy in oppiste direction
 											 // enemy scale up 130 % hence 1.3
  //Add a TWEEN
@@ -195,12 +198,17 @@ function eAttack(){
  																							//eEscape will move enemy back out
 }
 function eEscape(){ // escaping after getting an egg.
+	eEgg = true; // shows the enemy carrying the egg
 	enemy.scaleX = 1.3; // flip the enemy
 	var p = Math.round(Math.random()*4); //generate random number between 0-3
 	//that number is going to choose the enemys random escape
 	//ePosX ePosY will hold random escape postions for enemey
   Tween.get(enemy).to({x:ePosX[p], y:ePosY[p]}, attackSpeed, Ease.sineOut).call(eEscape);
 
+}
+
+function eggControl(){
+	enemy.egg.visible = eEgg;
 }
 </script>
 </head>
